// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create fetch config failure 1`] = `
Object {
  "type": "FETCH_CONFIG_FAILURE",
}
`;

exports[`should create fetch config request 1`] = `
Object {
  "type": "FETCH_CONFIG_REQUEST",
}
`;

exports[`should create fetch config success 1`] = `
Object {
  "data": Object {
    "accountsUrl": "dummyAccountsUrl",
  },
  "type": "FETCH_CONFIG_SUCCESS",
}
`;

exports[`should fail on 400 1`] = `
Array [
  Array [
    Object {
      "type": "FETCH_CONFIG_REQUEST",
    },
  ],
  Array [
    Object {
      "type": "FETCH_CONFIG_FAILURE",
    },
  ],
  Array [
    Object {
      "type": "UNEXPECTED_ERROR_OCCURED",
    },
  ],
]
`;

exports[`should fail on 500 1`] = `
Array [
  Array [
    Object {
      "type": "FETCH_CONFIG_REQUEST",
    },
  ],
  Array [
    Object {
      "type": "FETCH_CONFIG_FAILURE",
    },
  ],
  Array [
    Object {
      "type": "UNEXPECTED_ERROR_OCCURED",
    },
  ],
]
`;

exports[`should fail to parse response 1`] = `
Array [
  Array [
    Object {
      "type": "FETCH_CONFIG_REQUEST",
    },
  ],
  Array [
    Object {
      "type": "FETCH_CONFIG_FAILURE",
    },
  ],
  Array [
    Object {
      "type": "UNEXPECTED_ERROR_OCCURED",
    },
  ],
]
`;

exports[`should run with success 1`] = `
Array [
  Array [
    Object {
      "type": "FETCH_CONFIG_REQUEST",
    },
  ],
  Array [
    Object {
      "data": Object {},
      "type": "FETCH_CONFIG_SUCCESS",
    },
  ],
]
`;
